[tool.poetry]
name = "bareASGI-session"
version = "3.0.0-rc.1"
description = "Session support for bareASGI"
repository = "https://github.com/rob-blackbourn/bareASGI-session"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
keywords = ['bareASGI', 'session']
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "bareasgi_session" }
]

[tool.poetry.dependencies]
python = "^3.7"
bareasgi = "^3.5"
baretypes = "^3.1.1"
bareutils = "^3.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
hypercorn = "^0.9"
mypy = "^0.740.0"
pylint = "^2.4"
pytest = "^5.3"
pytest-asyncio = "^0.10.0"
pytest-runner = "^5.2"
uvicorn = "^0.11.1"
rope = "^0.16.0"
jetblack-markdown = "^0.2.0"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
