[tool.poetry]
name = "bareASGI-session"
version = "4.0.0-alpha.0"
description = "Session support for bareASGI"
repository = "https://github.com/rob-blackbourn/bareASGI-session"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
keywords = ['bareASGI', 'session']
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "bareasgi_session" }
]

[tool.poetry.dependencies]
python = "^3.7"
bareasgi = "^4.0.0-alpha.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
hypercorn = "^0.11"
mypy = "^0.910"
pylint = "^2.4"
pytest = "^5.3"
pytest-asyncio = "^0.10.0"
pytest-runner = "^5.2"
uvicorn = "^0.15"
rope = "^0.16.0"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mike = "^1.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
